--- a/backend/package.json
+++ b/backend/package.json
@@ -20,12 +20,12 @@
     "firebase-admin": "^13.6.1",
     "groq-sdk": "^0.37.0",
     "helmet": "^8.1.0",
-    "zod": "^4.3.6"
-  },
-  "devDependencies": {
+    "zod": "^4.3.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.6",
-    "@types/node": "^25.2.2",
+    "@types/node": "^25.2.2"
+  },
+  "devDependencies": {
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   }
